refactor: moving to spring boot 4